updated the deps for Java compatibility